--- a/src/App.css
+++ b/src/App.css
@@ -1,43 +1,8 @@
 .App {
   text-align: center; 
   background-color: #e2ce8f;
-  width: 100%;
-  height: 100vh;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  margin: 0;
+  padding: 0;
 }
 
 .image1{
@@ -66,12 +31,13 @@
 .all{
   gap: 8px;
   display: flex;
-  flex-direction: column;
   align-items: center;
+  justify-content: center;
 }
 
 .ttt {
   font-family: 'Poppins', 'Arial Black', sans-serif;
-  font-weight: 700;
+  font-weight: 600;
   color: #b5090e;
+  font-size: 25px;
 }
