--- a/src/App.css
+++ b/src/App.css
@@ -43,3 +43,17 @@
   color: #b5090e;
   font-size: 25px;
 }
+
+@media (max-width: 768px) {
+.all{
+  flex-direction: column;
+}
+}
+
+/* ===== EXTRA SMALL PHONES ===== */
+@media (max-width: 480px) {
+  .all{
+  flex-direction: column;
+}
+}
+
