--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@
   font-family: 'Poppins', sans-serif;
   color: #ffffff;
   padding: 5px;
-  width: 400px;
+  width: 350px;
   height: 100%;
   font-size: 1.0rem;
   white-space: nowrap;
@@ -21,7 +21,7 @@
   border-color: #ac8686;
   border-radius: 5px;
   text-decoration: none;
-  margin: 30px;
+  margin: 10px;
 }
 .btn-text:hover {
   background-color: #2d0c01; /* Deep Bajrangi Maroon on hover */
@@ -31,7 +31,7 @@
 
 }
 .all{
-  gap: 8px;
+  /* gap: 8px; */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -47,6 +47,7 @@
 @media (max-width: 768px) {
 .all{
   flex-direction: column;
+  gap: 1px;
 }
 }
 
